k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-ns
  labels:
    name: wordpress
