k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: wordpress-ns
  labels: 
    app: db-deploy
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.6.4-focal

          ports:
            - containerPort: 3306
            - containerPort: 33060

          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"

          args:
            - "--default-authentication-plugin=mysql_native_password"

          livenessProbe:
            exec:
              command:
              - mysqladmin
              - ping
              - -h
              - localhost
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            exec:
              command:
              - mysqladmin
              - ping
              - -h
              - localhost
            initialDelaySeconds: 5
            periodSeconds: 10            

          volumeMounts: 
            - name: mysql-pvc
              mountPath: /var/lib/mysql

      volumes: 
        - name: mysql-pvc
          persistentVolumeClaim: 
            claimName: mysql-pvc
