k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: wordpress-ns
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
    nodePort: 30306 

  selector:
    app: mysql
  type: NodePort
