k8s/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress-ns
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  selector:
    app: wordpress
  type: ClusterIP
