k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress-ns

  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik 
  rules:
  - host: wordpress.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
  tls:
  - hosts:
    - wordpress.local
    secretName: wp-tls
